src/prop_browser/snapshots/vtui__prop_browser__browser__snapshot_tests__property_browser_static_default_selection_snapshot.snap
---
source: src/prop_browser/browser.rs
expression: "draw_property_browser(sample_metadata(), sample_root_object(), None,)"
---
"┌───────────────────────────VmPoweredOnEvent : 42────────────────────────────┐"
"│> ▶ config: {...}                                                           │"
"│    name: "demo-vm"                                                         │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"└ vTUI version: 0.2.3 ──────────────────→ - expand, ← - collapse, ↑↓ - scroll┘"
