src/prop_browser/snapshots/vtui__prop_browser__browser__snapshot_tests__property_browser_static_expanded_config_snapshot.snap
---
source: src/prop_browser/browser.rs
expression: "draw_property_browser(sample_metadata(), sample_root_object(), Some(ts),)"
---
"┌───────────────────────────VmPoweredOnEvent : 42────────────────────────────┐"
"│> ▼ config: {...}                                                           │"
"│      memoryMB: 8192                                                        │"
"│      numCpu: 4                                                             │"
"│    name: "demo-vm"                                                         │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"│                                                                            │"
"└ vTUI version: 0.2.3 ──────────────────→ - expand, ← - collapse, ↑↓ - scroll┘"
